[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/menuselection.gd" type="Script" id=2]

[node name="MenuSelection" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 240.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 232.0
margin_bottom = 216.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_right = 192.0
margin_bottom = 216.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 152.0
margin_bottom = 29.0
text = "OUR Menu"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 49.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 152.0
margin_bottom = 39.0
text = "Play"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 152.0
margin_bottom = 57.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 152.0
margin_bottom = 110.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 152.0
margin_bottom = 39.0
text = "Settings"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 152.0
margin_bottom = 163.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="InfoButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer4"]
margin_top = 10.0
margin_right = 152.0
margin_bottom = 39.0
text = "Info"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 152.0
margin_bottom = 216.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 10.0
margin_right = 152.0
margin_bottom = 39.0
text = "Quit to Desktop"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/QuitButton" to="." method="_on_QuitButton_pressed"]
